--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -136,4 +136,5 @@
     <string name="notification_settings_default">Benachrichtigungseinstellungen Standardpriorität</string>
     <string name="notification_settings_high">Benachrichtigungseinstellungen hohe Priorität</string>
     <string name="calendar">Kalender</string>
+    <string name="show_only_open">Nur offene anzeigen</string>
 </resources>
