--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -136,4 +136,5 @@
     <string name="notification_settings_default">Prioridad por defecto de los ajustes de notificación</string>
     <string name="notification_settings_high">Ajustes de notificación de alta prioridad</string>
     <string name="calendar">Calendario</string>
+    <string name="show_only_open">Mostrar solo abiertas</string>
 </resources>
