--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -136,4 +136,5 @@
     <string name="notification_settings_default">Impostazioni di notifica priorità predefinita</string>
     <string name="notification_settings_high">Impostazioni di notifica ad alta priorità</string>
     <string name="calendar">Calendario</string>
+    <string name="show_only_open">Mostra solo aperte</string>
 </resources>
