--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <string name="app_name">MedTimer</string>
     <string name="tab_settings">Ajustes</string>
     <string name="tab_overview">Resumen</string>
@@ -16,8 +16,9 @@
     <string name="confirm">Confirmar</string>
     <string name="are_you_sure_delete_medicine">¿Quieres eliminar el medicamento?</string>
     <string name="no_reminders">Ningún recordatorio establecido</string>
-    <plurals name="sum_reminders" tools:ignore="MissingQuantity">
-        <item quantity="one" tools:ignore="MissingQuantity">%1$d recordatorio\n%2$s</item>
+    <plurals name="sum_reminders">
+        <item quantity="one">%1$d recordatorio\n%2$s</item>
+        <item quantity="many">%1$d recordatorios\n%2$s</item>
         <item quantity="other">%1$d recordatorios\n%2$s</item>
     </plurals>
     <string name="notification_title">Toma tu medicación</string>
@@ -110,7 +111,11 @@
     <string name="fourteen_days">14 días</string>
     <string name="thirty_days">30 días</string>
     <string name="total">Total</string>
-    <string name="last_n_days">Últimos %1$d días</string>
+    <plurals name="last_n_days">
+        <item quantity="one">Últimos 24 horas</item>
+        <item quantity="many">Últimos %1$d días</item>
+        <item quantity="other">Últimos %1$d días</item>
+    </plurals>
     <string name="name">Nombre</string>
     <string name="event_data">Datos del evento</string>
     <string name="backup">Backup</string>
