--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <string name="app_name">MedTimer</string>
     <string name="tab_settings">Impostazioni</string>
     <string name="tab_overview">Riepilogo</string>
@@ -16,8 +16,9 @@
     <string name="confirm">Conferma</string>
     <string name="are_you_sure_delete_medicine">Vuoi eliminare il medicinale\?</string>
     <string name="no_reminders">Nessun promemoria impostato</string>
-    <plurals name="sum_reminders" tools:ignore="MissingQuantity">
-        <item quantity="one" tools:ignore="MissingQuantity">%1$d promemoria\n%2$s</item>
+    <plurals name="sum_reminders">
+        <item quantity="one">%1$d promemoria\n%2$s</item>
+        <item quantity="many">%1$d promemoria\n%2$s</item>
         <item quantity="other">%1$d promemoria\n%2$s</item>
     </plurals>
     <string name="notification_title">Promemoria per i Medicinali</string>
@@ -48,14 +49,11 @@
     <string name="select_color">Seleziona il colore</string>
     <string name="exact_reminders">Promemoria esatti</string>
     <string name="change_color_toast">Tieni presente che le modifiche al colore hanno effetto solo nei promemoria futuri.</string>
-    <string name="permission_not_granted">Autorizzazione non concessa</string>
     <string name="exact_reminders_summary">I promemoria sono programmati all\'ora esatta (aumenta il consumo della batteria)</string>
     <string name="enable_alarm_dialog">Per consentire la programmazione di allarmi precisi, abilita questo per MedTimer nel seguente menu</string>
     <string name="generate_test_data">Genera dati di prova</string>
     <string name="create_reminder_dosage_hint">Dosaggio per il nuovo promemoria</string>
-    <string name="notification_tone_title">Suono di notifica</string>
     <string name="cycle_consecutive_days">Giorni attivi</string>
-    <string name="days">giorni</string>
     <string name="theme">Tema</string>
     <string name="default_">Predefinito</string>
     <string name="alternative">Alternativo</string>
@@ -113,7 +111,11 @@
     <string name="fourteen_days">14 giorni</string>
     <string name="thirty_days">30 giorni</string>
     <string name="total">Totale</string>
-    <string name="last_n_days">Ultimi %1$d giorni</string>
+    <plurals name="last_n_days">
+        <item quantity="one">Ultime 24 ore</item>
+        <item quantity="many">Ultimi %1$d giorni</item>
+        <item quantity="other">Ultimi %1$d giorni</item>
+    </plurals>
     <string name="name">Nome</string>
     <string name="event_data">Dati Eventi</string>
     <string name="backup">Backup</string>
