--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -138,7 +138,7 @@
     <string name="intro_overview_description">На экране обзора вы можете увидеть следующие напоминания и последние события напоминаний. События напоминаний можно редактировать, проводя пальцем вправо, и удалять, проводя пальцем влево.\n\nКроме того, вы можете вручную записывать дополнительные дозы одного из настроенных лекарств или пользовательского лекарства.</string>
     <string name="intro_analysis_description">Приложение сохраняет все события напоминаний. Вы можете проанализировать свои прошлые дозы на экране анализа и экспортировать свою историю через меню (три точки). История останется, даже если лекарства или напоминания будут удалены или переименованы.</string>
     <string name="show_intro">Показать описание приложения</string>
-    <string name="are_you_sure_delete_reminder_event">Вы точно хотите удалить событие напоминания?/string>
+    <string name="are_you_sure_delete_reminder_event">Вы точно хотите удалить событие напоминания?</string>
     <string name="high">Высокий</string>
     <string name="notification_importance">Приоритет напоминаний</string>
     <string name="notification_settings_default">Настройки уведомлений стандартного приоритета</string>
