--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -47,12 +47,10 @@
     <string name="three_days">3 дня</string>
     <string name="app_url">MedTimer на GitHub</string>
     <string name="color">Цвет</string>
-    <string name="select_color">Выбрать цвет/string>
+    <string name="select_color">Выбрать цвет</string>
     <string name="exact_reminders">Точные напоминания</string>
     <string name="change_color_toast">Имейте ввиду, что изменение цвета будет видно только в будущих напоминаниях</string>
-    <string name="exact_reminders_summary">Reminders are scheduled at the exact time (increases battery usage)</string>
     <string name="exact_reminders_summary">Напоминания установлены в конкретное время (увеличивает использование баттареи)</string>
-    <string name="enable_alarm_dialog">In order to allow scheduling exact alarms, enable this for MedTimer in the following menu</string>
     <string name="enable_alarm_dialog">Чтобы разрешить планирование точных напоминаний, включите эту возможность для MedTimer в следующем меню</string>
     <string name="generate_test_data">Сгенерировать тестовые данные</string>
     <string name="create_reminder_dosage_hint">Доза для нового напоминания</string>
@@ -97,7 +95,6 @@
     <string name="friday">Пятница</string>
     <string name="saturday">Суббота</string>
     <string name="sunday">Воскресенье</string>
-    <string name="weekend_mode_summary">Delay notifications on certain days of the week until a given time</string>
     <string name="weekend_mode_summary">Откладывать уведомления в конкретные дни недели до заданного времени</string>
     <string name="custom">Пользовательский…</string>
     <string name="advanced_settings">Продвинутые настройки</string>
