--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name" translatable="false">MedTimer</string>
     <string name="tab_settings">Einstellungen</string>
     <string name="tab_overview">Übersicht</string>
     <string name="tab_medicine">Medikamente</string>
@@ -102,6 +103,7 @@
     <string name="cycle_reminders">Zyklische Erinnerungen</string>
     <string name="weekday_limited">Auf manche Wochentage beschränkt</string>
     <string name="reminders">Erinnerungen</string>
+    <string name="sort" translatable="false">Sort</string>
     <string name="filter">Filter</string>
     <string name="seven_days">7 Tage</string>
     <string name="analysis">Analyse</string>
@@ -137,4 +139,6 @@
     <string name="calendar">Kalender</string>
     <string name="show_only_open">Nur offene anzeigen</string>
     <string name="date">Date</string>
+    <string name="active">Aktiv</string>
+    <string name="inactive">Inaktiv</string>
 </resources>
