--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name" translatable="false">MedTimer</string>
     <string name="tab_settings">Instellingen</string>
     <string name="tab_overview">Overzicht</string>
     <string name="tab_medicine">Medicatie</string>
@@ -51,7 +52,7 @@
     <string name="enable_alarm_dialog">Om het aanmaken van exacte herinneringen in te schakelen, moet u dit toestaan in het volgende menu</string>
     <string name="generate_test_data">Testgegevens genereren</string>
     <string name="create_reminder_dosage_hint">Dosering voor nieuwe herinnering</string>
-    <string name="cycle_consecutive_days">Dagen</string>
+    <string name="cycle_consecutive_days">Actieve dagen</string>
     <string name="theme">Thema</string>
     <string name="default_">Standaard</string>
     <string name="alternative">Alternatief</string>
@@ -102,6 +103,7 @@
     <string name="cycle_reminders">Cyclische herinneringen</string>
     <string name="weekday_limited">Beperkt tot sommige dagen van de week</string>
     <string name="reminders">Herinneringen</string>
+    <string name="sort" translatable="false">Sort</string>
     <string name="filter">Filter</string>
     <string name="seven_days">7 dagen</string>
     <string name="analysis">Analyse</string>
@@ -137,4 +139,6 @@
     <string name="calendar">Kalender</string>
     <string name="show_only_open">" Toon alleen openstaande"</string>
     <string name="date">Datum</string>
+    <string name="active">Actief</string>
+    <string name="inactive">Inactief</string>
 </resources>
