--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name" translatable="false">MedTimer</string>
     <string name="tab_settings">НастПоказать только открытые</string>
     <string name="tab_overview">Обзор</string>
     <string name="tab_medicine">Лекарства</string>
@@ -104,6 +105,7 @@
     <string name="cycle_reminders">Цикличные напоминания</string>
     <string name="weekday_limited">Ограничено до некоторых дней недели</string>
     <string name="reminders">Напоминания</string>
+    <string name="sort" translatable="false">Sort</string>
     <string name="filter">Фильтр</string>
     <string name="seven_days">7 дней</string>
     <string name="analysis">Анализ</string>
@@ -141,4 +143,6 @@
     <string name="calendar">Календарь</string>
     <string name="show_only_open">Показать только открытые</string>
     <string name="date">Дата</string>
+    <string name="active">Активный</string>
+    <string name="inactive">Неактивный</string>
 </resources>
