--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="app_name" translatable="false">MedTimer</string>
     <string name="tab_settings">Ayarlar</string>
     <string name="tab_overview">Genel Bakış</string>
     <string name="tab_medicine">İlaç</string>
@@ -102,6 +103,7 @@
     <string name="cycle_reminders">Döngüsel hatırlatıcılar</string>
     <string name="weekday_limited">Bazı haftaiçi günleri ile sınırlı</string>
     <string name="reminders">Hatırlatıcılar</string>
+    <string name="sort" translatable="false">Sort</string>
     <string name="filter">Filtre</string>
     <string name="seven_days">7 gün</string>
     <string name="analysis">Analiz</string>
@@ -137,4 +139,6 @@
     <string name="calendar">Takvim</string>
     <string name="show_only_open">" Sadece açıkları göster"</string>
     <string name="date">Tarih</string>
+    <string name="active">Aktif</string>
+    <string name="inactive">Aktif değil</string>
 </resources>
