214 make it possible to make reminders inactive (#216)
* Database v8 with new active field

* Added active switch per reminder

* Fixed format of next reminder

* Fixed unit tests

* Bumped version to v1.9.0

* Fixed function lines
Fixed strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -139,4 +139,6 @@
     <string name="calendar">Calendario</string>
     <string name="show_only_open">Mostrar solo abiertas</string>
     <string name="date">Fecha</string>
+    <string name="active">Activo</string>
+    <string name="inactive">Inactivo</string>
 </resources>
