--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -137,4 +137,6 @@
     <string name="calendar">Kalender</string>
     <string name="show_only_open">Nur offene anzeigen</string>
     <string name="date">Date</string>
+    <string name="active">Aktiv</string>
+    <string name="inactive">Inaktiv</string>
 </resources>
