--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -141,4 +141,7 @@
     <string name="date">Date</string>
     <string name="active">Actif</string>
     <string name="inactive">Inactif</string>
+    <string name="time_period">Période de temps</string>
+    <string name="period_start">Début de la période</string>
+    <string name="period_end">Fin de la période</string>
 </resources>
