--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -139,4 +139,7 @@
     <string name="date">Date</string>
     <string name="active">Aktiv</string>
     <string name="inactive">Inaktiv</string>
+    <string name="time_period">Zeitspanne</string>
+    <string name="period_start">Beginn der Zeitspanne</string>
+    <string name="period_end">Ende der Zeitspanne</string>
 </resources>
