--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -21,10 +21,12 @@
         <item quantity="other">%1$d promemoria\n%2$s</item>
     </plurals>
     <string name="notification_title">Promemoria per i Medicinali</string>
+    <string name="notification_content_blank">Sono le %1$s - è ora di prendere %3$s%4$s</string>
     <string name="notification_content">Sono le %1$s - è ora di prendere %2$s di %3$s%4$s</string>
     <string name="notification_taken">PRESO</string>
     <string name="taken">Preso</string>
     <string name="skipped">Saltato</string>
+    <string name="reminder_event_blank">%2$s, %3$s</string>
     <string name="reminder_event">%1$s di %2$s, %3$s</string>
     <string name="recent_events">Eventi recenti</string>
     <string name="next_reminders">Prossimi promemoria</string>
